remove some ui-clutter, fix spacing and add new favicon

--- a/app/assets/stylesheets/screen.css.sass
+++ b/app/assets/stylesheets/screen.css.sass
@@ -118,7 +118,7 @@ nav
   z-index: 10
   font: bold 1.5em hero,arial,verdana,sans-serif
   border-bottom: 1px solid white
-  padding: 0.5em 0em 0.2em 0em
+  padding: 0.5em 0em 0.5em 0em
 
   #locale
     float: right
@@ -144,12 +144,6 @@ nav
     a, a:hover, a:active, a:visited
       text-decoration: none
       color: black
-  .logo
-    opacity: 0
-    background: url(/assets/logo_small.png) 0 0 no-repeat
-    margin: 0
-    width: 25px
-    height: 25px
 
 .main
   padding: 0em 2em 2em 2em
